# Authentication

Hi/: README.md  package-lock.json  package.json  tailwind.config.js
Hi/src/: App.vue  main.js
Hi/src/assets/: main.css
Hi/src/components/: Blog.vue  BlogView.vue  Example.vue  HelloWorld.vue  Login.vue  MyProfile.vue  Navbar.vue  RegistrationForm.vue  ShowDeletedUsers.vue  StepForm.vue  UserTable.vue
Hi/src/router/: index.js
Hi/src/store/: index.js
Hi/src/views/: HomeView.vue
crud/: pyproject.toml
crud/myproject/: db.sqlite3
crud/myproject/blog/: models.py  urls.py  views.py
crud/myproject/blog/migrations/: 0001_initial.py  0002_alter_blog_created_at_alter_blog_edited_at.py  0002_rename_blogmodel_blog.py
crud/myproject/myapp/: manager.py  models.py  serializers.py  urls.py  views.py
crud/myproject/myproject/: settings.py  urls.py
